[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elhadji-datastructure-package"
version = "0.1.2"  # Version incrémentée
authors = [
    { name="Elhadji Mamadou", email="your.email@example.com" },
]
description = "A collection of data structure implementations with visualization capabilities"
readme = "README.md"
requires-python = ">=3.6"